# wallpaper-control

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-windows.yml  build.yml
src/: main.rs
wallpaper_fetcher/: Cargo.toml  README.md
wallpaper_fetcher/src/: main.rs
